# g-wiz

./: .gitignore  Cargo.toml  README.md
src/: callbacks.rs  diff.rs  history.rs  load_assets.rs  main.rs  pan_orbit.rs  render.rs  select.rs  settings.rs  ui.rs
src/callbacks/: callbacks.rs  console.rs  events.rs  handlers.rs
src/diff/: mod.rs
src/events/: console.rs  events.rs  handlers.rs  mod.rs  readers.rs
src/print_analyzer/: mod.rs
src/print_analyzer/emit/: mod.rs
src/print_analyzer/file_reader/: mod.rs
src/print_analyzer/parse/: mod.rs
src/print_analyzer/parse/file_reader/: mod.rs
src/print_analyzer/transform/: mod.rs
src/render/: mod.rs
src/select/: mod.rs
src/settings/: mod.rs  settings.json
