[package]
name = "visual_gcode_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy_egui = "0.27.1"
egui = "0.27.2"
print_analyzer = {path = "../print_analyzer"}


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
